My movie collection

--- a/My movie Collection.html
+++ b/My movie Collection.html
@@ -11,9 +11,42 @@
         <caption>My favourite movies</caption>
         <thread>
             <tr>
-                <th></th>
+                <th>Title</th>
+                <th>Genre</th>
+                <th>Year</th>
+                <th>Directed By</th>
             </tr>
         </thread>
+        <tbody>
+            <tr>
+                <td>Movie 1</td>
+                <td>Action</td>
+                <td>2023</td>
+                <td>Tony stark</td>
+            </tr>
+            <tr>
+                <td>Movie 2</td>
+                <td>Drama</td>
+                <td>2008</td>
+                <td>Happy Hogan</td>
+            </tr>
+            <tr>
+                <td>Movie 3</td>
+                <td>Comedy</td>
+                <td>2015</td>
+                <td>Jon Watts</td>
+            </tr>
+            <tr>
+                <td>Movie 4</td>
+                <td>Horror</td>
+                <td>2015</td>
+                <td>James Wan</td>
+            </tr>
+            <tr>
+                <td>Movie 5</td>
+                <td>Science Fiction</td>
+                <td>2010</td>
+                <td>Christopher Nolan</td>
     </table>
 
 </body>
