not an activity

--- a/not an activity.html
+++ b/not an activity.html
@@ -22,7 +22,7 @@
     .box{
       height: 100px;
       width: 100px;
-      margin: 20px;
+      /* margin: 20px; */
       padding: 20px;
       color: white;
       /* background-color: green; */
