--- a/not an activity2.html
+++ b/not an activity2.html
@@ -17,7 +17,7 @@
       display: flex;
       flex-direction:column-reverse;
       justify-content: flex-end;
-      align-items: flex-end;
+      align-items: center;
     }
     .box{
       height: 100px;
@@ -30,6 +30,7 @@
     .one{background-color: yellow;}
     .two{background-color: red;}
     .three{background-color: green;}
+    .four{background-color: #fff;}
   </style>
 </head>
 <body>
@@ -37,7 +38,7 @@
     <div class="box one">1</div>
     <div class="box two">2</div>
     <div class="box three">3</div>
-    <!-- <div class="box four">4</div> -->
+    <div class="box four">4</div>
   </div>
 </body>
 </html>
